add db seeder, healthcheck, minor fixes
